ingress/crowdsec-bouncer-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bouncer
  namespace: ingress
spec:
  plugin:
    bouncer:
      enabled: true
      crowdsecMode: stream
      crowdsecLapiHost: crowdsec-service.ingress.svc.cluster.local:8080
      crowdsecLapiKey: <YOUR-BOUNCER-KEY>
